fixed flicker on eof marker, fixed new lines on copy and paste

--- a/client/resources/index.css
+++ b/client/resources/index.css
@@ -523,3 +523,6 @@ span.term_title_watch{
 
 
 }
+.line_stdout span,.line_stderr span {
+    display: contents;
+}
